# xferstats

./: Makefile  README.md  xferstats-2.16-man.patch  xferstats.spec
src/: ChangeLog  INSTALL  Makefile.in  aclocal.m4  config.c  config.h.in  configure  configure.in  display.c  parselog.c  xferstats.8  xferstats.c  xferstats.cfg  xferstats.h
